all changes are done

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,6 +66,16 @@
   }
 }
 
+* {
+  -webkit-user-select: none;
+  /* Safari */
+  -ms-user-select: none;
+  /* IE 10 and IE 11 */
+  user-select: none;
+  /* Standard syntax */
+
+}
+
 @layer base {
   * {
     @apply border-border;
